--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li>git status</li>
         <li>git add . or git add "filename"</li>
         <li>git status</li>
+        <li>git commit -m"Some message" -m"Optional, this is a really long message "</li>
     </ol>
 </body>
 </html>
